年齢確認の追加
16歳未満は登録できません。

--- a/locales/en-US.yml
+++ b/locales/en-US.yml
@@ -248,6 +248,7 @@ noMoreHistory: "There is no further history"
 startMessaging: "Start a new chat"
 nUsersRead: "read by {n}"
 agreeTo: "I agree to {0}"
+ageVerification: "I'm over sixteen."
 tos: "Terms of Service"
 start: "Begin"
 home: "Home"
