--- a/locales/ja-JP.yml
+++ b/locales/ja-JP.yml
@@ -248,6 +248,7 @@ noMoreHistory: "これより過去の履歴はありません"
 startMessaging: "チャットを開始"
 nUsersRead: "{n}人が読みました"
 agreeTo: "{0}に同意"
+ageVerification: "私は16歳以上です"
 tos: "利用規約"
 start: "始める"
 home: "ホーム"
